# srt-translator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: __init__.py
