[project]
name = "srt-translator"
version = "0.1.0"
description = "A tool to translate subtitle files (.srt) using OpenAI's GPT models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.68.2",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "certifi>=2025.11.12",
]
